<resources>
    <string name="app_name">iFisio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="remember">Recordarme</string>
    <string name="login">Acceder</string>
    <string name="forgotpwd">¿Olvidaste tu contraseña?</string>
    <string name="register">Registro</string>
    <string name="separator">|</string>
    <string name="patients">Pacientes</string>
    <string name="database">Base de Datos</string>
    <string name="profile">Perfil</string>
    <string name="schedule">Agenda</string>
    <string name="title_activity_testlogin">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="join">Entrar</string>
    <string name="have_account">¿Ya tienes cuenta?</string>
</resources>
