<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_patients"
            android:title="@string/patients" />
        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/ic_storage"
            android:title="@string/database" />
    </group>

    <item android:title="Datos">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_user"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/ic_event"
                android:title="@string/schedule" />
        </menu>
    </item>

</menu>
