<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/box_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/login_box"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:background="login"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="10">
            <CheckBox
                android:id="@+id/login_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:gravity="center">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/box_rounded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <TextView
                android:id="@+id/login_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator" />

            <TextView
                android:id="@+id/login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotpwd" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>